# trmnl-larapaper-devices

./: README.md  hacs.json  plan.md  pyproject.toml
custom_components/larapaper/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  image.py  manifest.json  sensor.py  strings.json
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_image.py  test_sensor.py
