[project]
name = "trmnl-larapaper-devices"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-socket",
    "pytest-timeout",
    "pytest-xdist",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
